# genai-earnings-analyst

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run_cli.py
docs/: 00_start_here.md  01_architecture_and_design.md  02_installation_and_setup.md  03_module_reference.md  04_sdlc_and_engineering_practices.md  05_team_and_sprint_plan.md  06_quality_assurance.md
knowledge transfer/: 00_START_HERE.md  01_architecture.md  02_installation_and_setup.md  03_module_reference.md  04_end_to_end_walkthrough.md  05_srs_traceability.md  06_review_and_demo_guide.md  07_troubleshooting_faq.md  08_extending_the_project.md  09_github_guide.md
src/genai_analyst/: __init__.py  dashboard.py
src/genai_analyst/core/: __init__.py  config.py  pipeline.py
src/genai_analyst/ingestion/: __init__.py  edgar_client.py  filing_parser.py
src/genai_analyst/nlp/: __init__.py  generation.py  sentiment.py
src/genai_analyst/rag/: __init__.py  chunker.py  embedder.py  indexer.py  retriever.py  vector_store.py
tests/: test_chunker.py  test_filing_parser.py  test_sentiment.py
