[project]
name = "genai-earnings-analyst"
version = "1.0.0"
description = "GenAI Financial Earnings Report Analyst — RAG + FinBERT + Llama 3"
requires-python = ">=3.10"
readme = "README.md"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
